# Select

./: .gitignore  Dockerfile  README.md  pyproject.toml  sample.csv
invoice_bot/: logging_setup.py  main.py  portal_uploader.py
tests/: test_smoke.py
